# KalaKit-website

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.md  Readme.md  build_all.bat  build_debug.bat  build_release.bat  new-banned-ips.txt
content/: banned-ips.txt  contact.html  index.html  kalaserver.html
content/assets/css/: code.css  contact.css  error.css  footer.css  homepage.css  main.css  project.css  sidebar.css
content/assets/js/: main.js
content/errors/: 401.html  404.html  405.html  413.html  418.html  500.html
content/kalakit/: robots.txt
content/kalaserver/: client.html
content/kalaserver/client/: canconnect.html  connectionstart.html  isvalidroute.html  sendemail.html
server/: banned-ips.txt  blacklisted-keywords.txt  whitelisted-extensions.txt  whitelisted-ips.txt
server/_external_shared/Cloudflared/: readme.md
server/_external_shared/KalaHeaders/: thread_utils.hpp
server/_external_shared/KalaServer/: readme.md
server/_external_shared/KalaServer/docs/: external_libraries.md
server/_external_shared/KalaServer/include/core/: ks_core.hpp
server/_external_shared/KalaServer/include/server/: ks_cloudflare.hpp  ks_connect.hpp  ks_inbound.hpp  ks_response.hpp  ks_server.hpp
server/content/: about.html  admin.html  contact.html  index.html  kalacrashhandler.html  kalaphysics.html  kalaserver.html  kalawindow.html  videos.html
server/content/assets/css/: admin.css  code.css  contact.css  error.css  footer.css  form.css  homepage.css  main.css  project.css  sidebar.css
server/content/assets/js/: ban_info.js  main.js  player.js  sidebar.js  syntax-highlight.js  video.js
server/content/assets/js/sidebar-content/: sidebar-content-kalacrashhandler.js  sidebar-content-kalaserver.js
server/content/errors/: 400.html  401.html  403.html  404.html  418.html  500.html
server/content/kalacrashhandler/: api.html  home.html  manual.html
server/content/kalaphysics/: api.html  home.html  manual.html
server/content/kalaserver/: api.html  client.html  home.html  manual.html
server/content/kalaserver/api/: client.html
server/content/kalaserver/client/: extractheader.html  extractheadervalue.html  handleclient.html  parsebyterange.html  socketcleanup.html
server/content/kalawindow/: api.html  home.html  manual.html
server/content/pages/: about.html  admin.html
server/content/pages/errors/: 418.html
server/content/pages/media/: music.html
server/content/projects/: kalacrashhandler.html  kalaphysics.html  kalaserver.html  kalawindow.html
server/include/core/: core.hpp
server/src/: main.cpp
server/src/core/: core.cpp
